made tcl script override of other arguments optional

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configuració
 ENABLE_BOTH=Habilita ambdues unitats de disquet
 DISABLE_SECOND=Inhabilita la segona unitat de disquet
 DISABLE_BOTH=Inhabilita ambdues unitats de disquet
+
+OVERRIDE_OTHER_ARGUMENTS=Substitueix altres arguments
