--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_de_DE.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Konfiguration
 ENABLE_BOTH=Beide Diskettenlaufwerke aktivieren
 DISABLE_SECOND=Die zweite Diskettenlaufwerk deaktivieren
 DISABLE_BOTH=Beide Diskettenlaufwerke deaktivieren
+
+OVERRIDE_OTHER_ARGUMENTS=Andere Argumente überschreiben
