--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_en_US.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configuration
 ENABLE_BOTH=Enable Both Drives
 DISABLE_SECOND=Disable Second Drive
 DISABLE_BOTH=Disable Both Drives
+
+OVERRIDE_OTHER_ARGUMENTS=Override Other Arguments
