--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_es_ES.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configuración
 ENABLE_BOTH=Habilitar ambas disqueteras
 DISABLE_SECOND=Deshabilitar la segunda disquetera
 DISABLE_BOTH=Deshabilitar ambas disqueteras
+
+OVERRIDE_OTHER_ARGUMENTS=Reemplazar los otros argumentos
