--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fi_FI.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Kokoonpano
 ENABLE_BOTH=Ota käyttöön molemmat levykeasemat
 DISABLE_SECOND=Poista käytöstä toinen levykeasema
 DISABLE_BOTH=Poista käytöstä molemmat levykeasemat
+
+OVERRIDE_OTHER_ARGUMENTS=Ohita muut argumentit
