--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configuration
 ENABLE_BOTH=Activer les deux lecteurs de disquette
 DISABLE_SECOND=Désactiver le deuxième lecteur de disquette
 DISABLE_BOTH=Désactiver les deux lecteurs de disquette
+
+OVERRIDE_OTHER_ARGUMENTS=Remplacer les autres arguments
