--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_it_IT.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configurazione
 ENABLE_BOTH=Abilita entrambe le unità floppy
 DISABLE_SECOND=Disabilita la seconda unità floppy
 DISABLE_BOTH=Disabilita entrambe le unità floppy
+
+OVERRIDE_OTHER_ARGUMENTS=Sostituisci altri argomenti
