--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
@@ -10,3 +10,5 @@ CONFIGURATION=\u69CB\u6210
 ENABLE_BOTH=\u30D5\u30ED\u30C3\u30D4\u30FC\u30C7\u30A3\u30B9\u30AF\u30C9\u30E9\u30A4\u30D6\u306E\u4E21\u65B9\u6709\u52B9\u306B\u3059\u308B
 DISABLE_SECOND=\u7B2C\u4E8C\u306E\u30D5\u30ED\u30C3\u30D4\u30FC\u30C7\u30A3\u30B9\u30AF\u30C9\u30E9\u30A4\u30D6\u7121\u52B9\u306B\u3059\u308B
 DISABLE_BOTH=\u30D5\u30ED\u30C3\u30D4\u30FC\u30C7\u30A3\u30B9\u30AF\u30C9\u30E9\u30A4\u30D6\u306E\u4E21\u65B9\u7121\u52B9\u306B\u3059\u308B
+
+OVERRIDE_OTHER_ARGUMENTS=\u4ED6\u306E\u30AA\u30D7\u30B7\u30E7\u30F3\u3092\u30AA\u30FC\u30D0\u30FC\u30E9\u30A4\u30C9\u3059\u308B
