--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
@@ -10,3 +10,5 @@ CONFIGURATION=\uAD6C\uC131
 ENABLE_BOTH=\uD50C\uB85C\uD53C \uB514\uC2A4\uD06C \uB4DC\uB77C\uC774\uBE0C\uB97C \uBAA8\uB450 \uC0AC\uC6A9
 DISABLE_SECOND=\uB450 \uBC88\uC9F8 \uD50C\uB85C\uD53C \uB514\uC2A4\uD06C \uB4DC\uB77C\uC774\uBE0C \uC0AC\uC6A9 \uC548 \uD568
 DISABLE_BOTH=\uD50C\uB85C\uD53C \uB514\uC2A4\uD06C \uB4DC\uB77C\uC774\uBE0C\uB97C \uBAA8\uB450 \uC0AC\uC6A9 \uC548 \uD568
+
+OVERRIDE_OTHER_ARGUMENTS=\uB2E4\uB978 \uC778\uC218 \uC544\uC6C3 \uBB34\uC2DC
