--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configuratie
 ENABLE_BOTH=Beide diskettestations inschakelen
 DISABLE_SECOND=De tweede diskettestation uitschakelen
 DISABLE_BOTH=Beide diskettestations uitschakelen
+
+OVERRIDE_OTHER_ARGUMENTS=Andere argumenten overschrijven
