--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pl_PL.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Konfiguracja
 ENABLE_BOTH=W\u0142\u0105cz oba dyski
 DISABLE_SECOND=Wy\u0142\u0105cz drugi dysk
 DISABLE_BOTH=Wy\u0142\u0105cz oba dyski
+
+OVERRIDE_OTHER_ARGUMENTS=Zast\u0105p inne argumenty
