--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pt_BR.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Configuração
 ENABLE_BOTH=Habilitar ambas as unidades de disco
 DISABLE_SECOND=Desabilitar a segunda unidade de disco
 DISABLE_BOTH=Desabilitar ambas as unidades de disco
+
+OVERRIDE_OTHER_ARGUMENTS=Substituir outros argumentos
