--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_sv_SE.properties
@@ -10,3 +10,5 @@ CONFIGURATION=Konfiguration
 ENABLE_BOTH=Aktivera båda diskettenheter
 DISABLE_SECOND=Inaktivera andra diskettenhet
 DISABLE_BOTH=Inaktivera bådad diskettenheter
+
+OVERRIDE_OTHER_ARGUMENTS=Åsidosätt andra argument
