--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
@@ -10,3 +10,5 @@ CONFIGURATION=\u7D44\u614B
 ENABLE_BOTH=\u555F\u7528\u9019\u5169\u500B\u8EDF\u76E4\u9A45\u52D5\u5668
 DISABLE_SECOND=\u7981\u7528\u7B2C\u4E8C\u500B\u8EDF\u76E4\u9A45\u52D5\u5668
 DISABLE_BOTH=\u7981\u7528\u9019\u5169\u500B\u8EDF\u76E4\u9A45\u52D5\u5668
+
+OVERRIDE_OTHER_ARGUMENTS=\u8986\u84CB\u5176\u4ED6\u53C3\u6578
