--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_CN.properties
@@ -10,3 +10,5 @@ CONFIGURATION=\u914D\u7F6E
 ENABLE_BOTH=\u542F\u7528\u8FD9\u4E24\u4E2A\u8F6F\u76D8\u9A71\u52A8\u5668
 DISABLE_SECOND=\u7981\u7528\u7B2C\u4E8C\u4E2A\u8F6F\u76D8\u9A71\u52A8\u5668
 DISABLE_BOTH=\u7981\u7528\u8FD9\u4E24\u4E2A\u8F6F\u76D8\u9A71\u52A8\u5668
+
+OVERRIDE_OTHER_ARGUMENTS=\u8986\u76D6\u5176\u4ED6\u53C2\u6570
