added support for input devices and GFX9000

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Afegeix un joc
 EDIT_GAME=Edita un joc
+
+SETUP=Configuració
+INPUT_DEVICE=Dispositiu d'entrada
+NONE=Cap
+JOYSTICK=Palanca de control
+JOYSTICK_KEYBOARD=Palanca de control (teclat)
+MOUSE=Ratolí
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Connecta GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Extensió
