--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_de_DE.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Spiel hinzufügen
 EDIT_GAME=Spiel bearbeiten
+
+SETUP=Setup
+INPUT_DEVICE=Eingabegerät
+NONE=Keiner
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (Tastatur)
+MOUSE=Maus
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=GFX9000 verbinden
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Erweiterung
