--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_en_US.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Add Game
 EDIT_GAME=Edit Game
+
+SETUP=Setup
+INPUT_DEVICE=Input Device
+NONE=None
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (Keyboard)
+MOUSE=Mouse
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Connect GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Extension
