--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_es_ES.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Añadir un juego
 EDIT_GAME=Editar un juego
+
+SETUP=Configuración
+INPUT_DEVICE=Dispositivo de entrada
+NONE=Ninguno
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (teclado)
+MOUSE=Ratón
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Conectar GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Extensión
