--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fi_FI.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Lisää peli
 EDIT_GAME=Muokkaa peli
+
+SETUP=Asennus
+INPUT_DEVICE=Syöttölaite
+NONE=Ei mitään
+JOYSTICK=Ohjainsauva
+JOYSTICK_KEYBOARD=Ohjainsauva (näppäimistö)
+MOUSE=Hiiri
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Liitä GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Laajennus
