--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Ajouter un jeu
 EDIT_GAME=Modifier un jeu
+
+SETUP=Configuration
+INPUT_DEVICE=Périphérique d'entrée
+NONE=Aucun
+JOYSTICK=Manette de jeu
+JOYSTICK_KEYBOARD=Manette de jeu (clavier)
+MOUSE=Souris
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Connecter GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Extension
