--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_it_IT.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Aggiungi gioco
 EDIT_GAME=Modifica gioco
+
+SETUP=Setup
+INPUT_DEVICE=Dispositivo di input
+NONE=Nessuno
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (tastiera)
+MOUSE=Mouse
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Connetti GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Estensione
