--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
@@ -1,5 +1,17 @@
 ADD_GAME=\u30B2\u30FC\u30E0\u3092\u8FFD\u52A0
 EDIT_GAME=\u30B2\u30FC\u30E0\u3092\u7DE8\u96C6
+
+SETUP=\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7
+INPUT_DEVICE=\u5165\u529B\u30C7\u30D0\u30A4\u30B9
+NONE=\u7121\u3057
+JOYSTICK=\u30B8\u30E7\u30A4\u30B9\u30C6\u30A3\u30C3\u30AF
+JOYSTICK_KEYBOARD=\u30B8\u30E7\u30A4\u30B9\u30C6\u30A3\u30C3\u30AF (\u30AD\u30FC\u30DC\u30FC\u30C9)
+MOUSE=\u30DE\u30A6\u30B9
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=GFX9000 \u63A5\u7D9A
+
 ROM_A=\u30ED\u30E0 A
 ROM_B=\u30ED\u30E0 B
 EXTENSION=\u62E1\u5F35\u6A5F\u80FD
