--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
@@ -1,5 +1,17 @@
 ADD_GAME=\uAC8C\uC784 \uCD94\uAC00
 EDIT_GAME=\uAC8C\uC784 \uD3B8\uC9D1
+
+SETUP=\uC124\uC815
+INPUT_DEVICE=\uC785\uB825 \uC7A5\uCE58
+NONE=\uC5C6\uC74C
+JOYSTICK=\uC870\uC774\uC2A4\uD2F1
+JOYSTICK_KEYBOARD=\uC870\uC774\uC2A4\uD2F1 (\uD0A4\uBCF4\uB4DC)
+MOUSE=\uB9C8\uC6B0\uC2A4
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=GFX9000 \uC5F0\uACB0\uD558\uB2E4
+
 ROM_A=\uB86C A
 ROM_B=\uB86C B
 EXTENSION=\uD655\uC7A5\uBA85
