--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pl_PL.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Dodaj gr\u0119
 EDIT_GAME=Edycja gry
+
+SETUP=Konfiguracja
+INPUT_DEVICE=Urz\u0105dzenie wej\u015Bciowe
+NONE=\u017Baden
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (klawiatura)
+MOUSE=Mysz
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Po\u0142\u0105cz GFX9000
+
 ROM_A=Rom A
 ROM_B=Rom B
 EXTENSION=Rozszerzenie
