--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pt_BR.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Adicionar jogo
 EDIT_GAME=Editar jogo
+
+SETUP=Configuração
+INPUT_DEVICE=Dispositivo de entrada
+NONE=Nenhum
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (teclado)
+MOUSE=Mouse
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Conectar GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Extensão
