--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_sv_SE.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Lägg till spel
 EDIT_GAME=Redigera spel
+
+SETUP=Konfiguration
+INPUT_DEVICE=Indataenhet
+NONE=Ingen
+JOYSTICK=Styrspak
+JOYSTICK_KEYBOARD=Styrspak (tangentbord)
+MOUSE=Mus
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Anslut GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Anknytning
