--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_CN.properties
@@ -1,5 +1,17 @@
 ADD_GAME=\u6DFB\u52A0\u6E38\u620F
 EDIT_GAME=\u7F16\u8F91\u6E38\u620F
+
+SETUP=\u5B89\u88C5
+INPUT_DEVICE=\u8F93\u5165\u8BBE\u5907
+NONE=\u6CA1\u6709
+JOYSTICK=\u6E38\u620F\u6746
+JOYSTICK_KEYBOARD=\u6E38\u620F\u6746 (\u952E\u76D8)
+MOUSE=\u9F20\u6807
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=\u8FDE\u63A5 GFX9000
+
 ROM_A=ROM 1
 ROM_B=ROM 2
 EXTENSION=\u6269\u5C55
