--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
@@ -1,5 +1,17 @@
 ADD_GAME=\u65B0\u589E\u724C\u5C40
 EDIT_GAME=\u7DE8\u8F2F\u724C\u5C40
+
+SETUP=\u8A2D\u5B9A
+INPUT_DEVICE=\u8F38\u5165\u88DD\u7F6E
+NONE=\u6C92\u6709
+JOYSTICK=\u6416\u687F
+JOYSTICK_KEYBOARD=\u6416\u687F (\u9375\u76E4)
+MOUSE=\u6ED1\u9F20
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=\u9023\u7DDA GFX9000
+
 ROM_A=ROM 1
 ROM_B=ROM 2
 EXTENSION=Extension
