--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ar_KW.properties
@@ -1,5 +1,17 @@
 ADD_GAME=\u0625\u0636\u0627\u0641\u0629 \u0644\u0639\u0628\u0629
 EDIT_GAME=\u062A\u062D\u0631\u064A\u0631 \u0644\u0639\u0628\u0629
+
+SETUP=\u0625\u0639\u062F\u0627\u062F
+INPUT_DEVICE=\u062C\u0647\u0627\u0632 \u0625\u062F\u062E\u0627\u0644
+NONE=\u0644\u0627 \u0634\u064A\u0621
+JOYSTICK=\u0630\u0631\u0627\u0639 \u0627\u0644\u0644\u0639\u0628
+JOYSTICK_KEYBOARD=\u0630\u0631\u0627\u0639 \u0627\u0644\u0644\u0639\u0628 (\u0644\u0648\u062D\u0629 \u0627\u0644\u0645\u0641\u0627\u062A\u064A\u062D)
+MOUSE=\u0645\u0627\u0648\u0633
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=\u062A\u0648\u0635\u064A\u0644 GFX9000
+
 ROM_A=\u0631\u0648\u0645 A
 ROM_B=\u0631\u0648\u0645 B
 EXTENSION=\u0645\u0644\u062D\u0642
