--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fa_IR.properties
@@ -1,5 +1,17 @@
 ADD_GAME=\u0627\u0641\u0632\u0648\u062F\u0646 \u0628\u0627\u0632\u06CC
 EDIT_GAME=\u0648\u06CC\u0631\u0627\u06CC\u0634 \u0628\u0627\u0632\u06CC
+
+SETUP=\u062A\u0646\u0638\u06CC\u0645
+INPUT_DEVICE=\u062F\u0633\u062A\u06AF\u0627\u0647 \u0648\u0631\u0648\u062F\u06CC
+NONE=\u0647\u06CC\u0686 \u06CC\u06A9
+JOYSTICK=\u062F\u0633\u062A\u0647 \u0628\u0627\u0632\u06CC
+JOYSTICK_KEYBOARD=\u062F\u0633\u062A\u0647 \u0628\u0627\u0632\u06CC (\u0635\u0641\u062D\u0647 \u06A9\u0644\u06CC\u062F)
+MOUSE=\u0645\u0627\u0648\u0633
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=\u0648\u0635\u0644 \u06A9\u0631\u062F\u0646	GFX9000
+
 ROM_A=\u0631\u0627\u0645 A
 ROM_B=\u0631\u0627\u0645 B
 EXTENSION=\u067E\u0633\u0648\u0646\u062F
