--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
@@ -1,5 +1,17 @@
 ADD_GAME=Spel toevoegen
 EDIT_GAME=Spel bewerken
+
+SETUP=Configuratie
+INPUT_DEVICE=Invoerapparaat
+NONE=Geen
+JOYSTICK=Joystick
+JOYSTICK_KEYBOARD=Joystick (toetsenbord)
+MOUSE=Muis
+ARKANOID_PAD=Arkanoid Pad
+TRACKBALL=Trackball
+TOUCHPAD=Touchpad
+CONNECT_GFX9000=Verbinden GFX9000
+
 ROM_A=ROM A
 ROM_B=ROM B
 EXTENSION=Extensie
