added ability to filter by GFX9000 (if set manually in the profile)

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditFilterWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditFilterWindow_pl_PL.properties
@@ -11,3 +11,5 @@ BETWEEN_INCLUSIVE=Pomi\u0119dzy (w\u0142\u0105cznie)
 
 VALUE=Warto\u015B\u0107
 SAVE_AS=Zapisz jako
+
+VIDEO_SOURCE=\u0179ród\u0142o wideo
