added quick filters

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Zu Favoriten hinzufügen
 FAVORITES=Favoriten
 SEARCH=Suchen
 FILTERS=Filter
+QUICK_FILTER=Schnellfilter
 NEW=Neu
 RESET=Zurücksetzen
 UNNAMED=Ohne Namen
