--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Agregar a Favoritos
 FAVORITES=Favoritos
 SEARCH=Buscar
 FILTERS=Filtros
+QUICK_FILTER=Filtro rápido
 NEW=Nuevo
 RESET=Restablecer
 UNNAMED=Sin nombre
