--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Lisää suosikkeihin
 FAVORITES=Suosikit
 SEARCH=Haku
 FILTERS=Suodattimet
+QUICK_FILTER=Pikasuodatin
 NEW=Uusi
 RESET=Palauta
 UNNAMED=Nimetön
