--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=\uC990\uACA8\uCC3E\uAE30\uC5D0 \uCD94\uAC00
 FAVORITES=\uC990\uACA8\uCC3E\uAE30
 SEARCH=\uAC80\uC0C9
 FILTERS=\uD544\uD130
+QUICK_FILTER=\uBE60\uB978 \uD544\uD130
 NEW=\uC2E0\uADDC
 RESET=\uB2E4\uC2DC \uC124\uC815
 UNNAMED=\uC774\uB984 \uC5C6\uC74C
