--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Lägg till i Favoriter
 FAVORITES=Favoriter
 SEARCH=Sök
 FILTERS=Filter
+QUICK_FILTER=Snabbfilter
 NEW=Nya
 RESET=Återställ
 UNNAMED=Namnlös
