--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=\u6DFB\u52A0\u5230\u6536\u85CF\u5939
 FAVORITES=\u6536\u85CF\u5939
 SEARCH=\u641C\u7D22
 FILTERS=\u6EE4\u955C
+QUICK_FILTER=\u5FEB\u901F\u7B5B\u9009
 NEW=\u65B0
 RESET=\u91CD\u7F6E
 UNNAMED=\u672A\u547D\u540D
