--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=\u65B0\u589E\u81F3\u6211\u7684\u6700\u611B
 FAVORITES=\u6211\u7684\u6700\u611B
 SEARCH=\u641C\u5C0B
 FILTERS=\u7BE9\u9078
+QUICK_FILTER=\u5FEB\u901F\u7BE9\u9078
 NEW=\u65B0\u589E
 RESET=\u91CD\u8A2D
 UNNAMED=\u672A\u547D\u540D
