--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Afegeix-ho a Preferits
 FAVORITES=Preferits
 SEARCH=Cerca
 FILTERS=Filtres
+QUICK_FILTER=Filtre ràpid
 NEW=Nou
 RESET=Reinicialitza
 UNNAMED=Sense nom
