--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Add to Favorites
 FAVORITES=Favorites
 SEARCH=Search
 FILTERS=Filters
+QUICK_FILTER=Quick Filter
 NEW=New
 RESET=Reset
 UNNAMED=Unnamed
