--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Ajouter aux favoris
 FAVORITES=Favoris
 SEARCH=Chercher
 FILTERS=Filtres
+QUICK_FILTER=Filtre rapide
 NEW=Nouveau
 RESET=Réinitialiser
 UNNAMED=Sans nom
