--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Aggiungi a Preferiti
 FAVORITES=Preferiti
 SEARCH=Cerca
 FILTERS=Filtri
+QUICK_FILTER=Filtro rapido
 NEW=Nuovo
 RESET=Reimposta
 UNNAMED=Senza nome
