--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=\u304A\u6C17\u306B\u5165\u308A\u306B\u8FFD\u52A0
 FAVORITES=\u304A\u6C17\u306B\u5165\u308A
 SEARCH=\u691C\u7D22
 FILTERS=\u30D5\u30A3\u30EB\u30BF
+QUICK_FILTER=\u30AF\u30A4\u30C3\u30AF \u30D5\u30A3\u30EB\u30BF\u30FC
 NEW=\u65B0\u898F
 RESET=\u30EA\u30BB\u30C3\u30C8
 UNNAMED=\u540D\u524D\u306A\u3057
