--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Toevoegen aan Favorieten
 FAVORITES=Favorieten
 SEARCH=Zoeken
 FILTERS=Filters
+QUICK_FILTER=Snel filter
 NEW=Nieuw
 RESET=Beginwaarden
 UNNAMED=Naamloos
