--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Dodaj do ulubionych
 FAVORITES=Ulubione
 SEARCH=Wyszukaj
 FILTERS=Filtry
+QUICK_FILTER=Szybki filtr
 NEW=Nowe
 RESET=Resetuj
 UNNAMED=Bez nazwy
