--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
@@ -11,6 +11,7 @@ ADD_FAVORITE=Adicionar aos favoritos
 FAVORITES=Favoritos
 SEARCH=Pesquisar
 FILTERS=Filtros
+QUICK_FILTER=Filtro rápido
 NEW=Novo
 RESET=Redefinir
 UNNAMED=Sem nome
