added filters tool tip

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Actualitzar totes les bases de dades
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Nombre de perfils actualitzats
+VIDEO_SOURCE=Origen del vídeo
 
 BR=Brasil
 DE=Alemanya
