--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Aller Datenbanken aktualisieren
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Zahl der aktualisierte Profile
+VIDEO_SOURCE=Videoquelle
 
 BR=Brasilien
 DE=Deutschland
