--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Update All Databases
 UPDATE_ALL_DATABASES_MNEMONIC=U
 TOTAL_UPDATED_PROFILES=Total updated profiles
+VIDEO_SOURCE=Video Source
 
 BR=Brazil
 DE=Germany
