--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Actualizar todas las bases de datos
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Número de perfiles actualizados
+VIDEO_SOURCE=Origen de vídeo
 
 BR=Brasil
 DE=Alemania
