--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=V
 UPDATE_ALL_DATABASES=P‰ivitt‰‰ kaikki tietokannat
 UPDATE_ALL_DATABASES_MNEMONIC=P
 TOTAL_UPDATED_PROFILES=M‰‰r‰ p‰ivitetty profiileja
+VIDEO_SOURCE=Videol‰hde
 
 BR=Brasilia
 DE=Saksa
