--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Mettre à jour toutes les bases de données
 UPDATE_ALL_DATABASES_MNEMONIC=M
 TOTAL_UPDATED_PROFILES=Nombre de profils mis à jour
+VIDEO_SOURCE=Source vidéo
 
 BR=Brésil
 DE=Allemagne
