--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Bijwerken alle databases
 UPDATE_ALL_DATABASES_MNEMONIC=B
 TOTAL_UPDATED_PROFILES=Aantal bijgewerkt profielen
+VIDEO_SOURCE=Videobron
 
 BR=Brazilië
 DE=Duitsland
