--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=Z
 UPDATE_ALL_DATABASES=Aktualizacja wszystkich baz
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Llo\u015B\u0107 zaktualizowane profile
+VIDEO_SOURCE=\u0179ród\u0142o wideo
 
 BR=Brazylia
 DE=Niemcy
