--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=M
 UPDATE_ALL_DATABASES=Uppdatera alla databaser
 UPDATE_ALL_DATABASES_MNEMONIC=U
 TOTAL_UPDATED_PROFILES=Antal uppdaterade profiler
+VIDEO_SOURCE=Videokälla
 
 BR=Brasilien
 DE=Tyskland
