--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=X
 UPDATE_ALL_DATABASES=\u66F4\u65B0\u6240\u6709\u6570\u636E\u5E93
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u7684\u914D\u7F6E\u6587\u4EF6\u6570\u91CF
+VIDEO_SOURCE=\u89C6\u9891\u6E90
 
 BR=\u5DF4\u897F
 DE=\u5FB7\u56FD
