--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=X
 UPDATE_ALL_DATABASES=\u66F4\u65B0\u6240\u6709\u6578\u64DA\u5EAB
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u7684\u914D\u7F6E\u6587\u4EF6\u6578\u91CF
+VIDEO_SOURCE=\u8996\u8A0A\u4F86\u6E90
 
 BR=\u5DF4\u897F
 DE=\u5FB7\u570B
