--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fa_IR.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=X
 UPDATE_ALL_DATABASES=\u0628\u0647 \u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u06CC \u067E\u0627\u06CC\u06AF\u0627\u0647 \u062F\u0627\u062F\u0647
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u062A\u0639\u062F\u0627\u062F \u067E\u0631\u0648\u0641\u0627\u06CC\u0644 \u0647\u0627\u06CC \u0628\u0647 \u0631\u0648\u0632 \u0634\u062F\u0647
+VIDEO_SOURCE=\u0645\u0646\u0628\u0639 \u0648\u06CC\u062F\u06CC\u0648
 
 BR=\u0628\u0631\u0632\u06CC\u0644
 DE=\u0622\u0644\u0645\u0627\u0646
