--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -71,6 +71,7 @@ CHANGE_MACHINE_MNEMONIC=X
 UPDATE_ALL_DATABASES=\uBAA8\uB4E0 \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uB97C \uC5C5\uB370\uC774\uD2B8
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\uC5C5\uB370\uC774\uD2B8 \uB41C \uD504\uB85C\uD544\uC758 \uC218
+VIDEO_SOURCE=\uBE44\uB514\uC624 \uC6D0\uBCF8
 
 BR=\uBE0C\uB77C\uC9C8
 DE=\uB3C5\uC77C
