added system to game properties (and refactored RepositoryGame)

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/GamePropertiesWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/GamePropertiesWindow_ja_JP.properties
@@ -1,5 +1,6 @@
 COMMON_NAME=\u5171\u901A\u540D
 FILE=\u30D5\u30A1\u30A4\u30EB
+SYSTEM=\u30B7\u30B9\u30C6\u30E0
 DUMP=Dump
 REMARK=\u30B3\u30E1\u30F3\u30C8
 START=\u76AE\u5207\u308A
