--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/GamePropertiesWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/GamePropertiesWindow_ko_KR.properties
@@ -1,5 +1,6 @@
 COMMON_NAME=\uC77C\uBC18 \uC774\uB984
 FILE=\uD30C\uC77C
+SYSTEM=\uC2DC\uC2A4\uD15C
 DUMP=Dump
 REMARK=\uC124\uBA85
 START=\uC2DC\uC791
