added more flags for countries to show in game properties

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -90,6 +90,9 @@ SA=Aràbia Saudita
 SE=Suècia
 UK=Regne Unit
 US=EUA
+TW=Taiwan
+CA=Canada
+EU=Unió Europea
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=No es pot desar la configuració
