--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -90,6 +90,9 @@ SA=Saudi-Arabien
 SE=Schweden
 UK=Vereinigtes Königreich
 US=USA
+TW=Taiwan
+CA=Kanada
+EU=Europäische Union
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Die Konfiguration kann nicht gespeichert werden
