--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -90,6 +90,9 @@ SA=Saudi Arabia
 SE=Sweden
 UK=United Kingdom
 US=USA
+TW=Taiwan
+CA=Canada
+EU=European Union
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Cannot save settings
