--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -90,6 +90,9 @@ SA=Arabia Saudita
 SE=Svezia
 UK=Regno Unito
 US=U.S.A.
+TW=Taiwan
+CA=Canada
+EU=Unione Europea
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Impossibile salvare configurazione
