--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
@@ -90,6 +90,9 @@ SA=\u30B5\u30A6\u30B8\u30A2\u30E9\u30D3\u30A2
 SE=\u30B9\u30A6\u30A7\u30FC\u30C7\u30F3
 UK=\u82F1\u56FD
 US=\u7C73\u56FD
+TW=\u53F0\u6E7E
+CA=\u30AB\u30CA\u30C0
+EU=\u6B27\u5DDE\u9023\u5408
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=\u8A2D\u5B9A\u3092\u4FDD\u5B58\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093
