--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -90,6 +90,9 @@ SA=\uC0AC\uC6B0\uB514 \uC544\uB77C\uBE44\uC544
 SE=\uC2A4\uC6E8\uB374
 UK=\uC5F0\uD569 \uC655\uAD6D
 US=\uBBF8\uAD6D
+TW=\uB300\uB9CC
+CA=\uCE90\uB098\uB2E4
+EU=\uC720\uB7FD \uC5F0\uD569
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=\uC124\uC815\uC744 \uC800\uC7A5\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
