--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -90,6 +90,9 @@ SA=Saudi-Arabië
 SE=Zweden
 UK=Verenigd Koninkrijk
 US=VS
+TW=Taiwan
+CA=Canada
+EU=Europese Unie
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Kan het instellingen niet opslaan
