--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -90,6 +90,9 @@ SA=Arabia Saudyjska
 SE=Szwecja
 UK=Zjednoczone Królestwo
 US=USA
+TW=Tajwan
+CA=Kanada
+EU=Unia Europejska
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Nie mo\u017Cna zapisa\u0107 ustawienia
