--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -90,6 +90,9 @@ SA=Saudi-Arabien
 SE=Sverige
 UK=Storbritannien
 US=USA
+TW=Taiwan
+CA=Kanada
+EU=Europeiska unionen
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Det går inte att spara inställningar
