--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -90,6 +90,9 @@ SA=Arabia Saudita
 SE=Suecia
 UK=Reino Unido
 US=EE.UU.
+TW=Taiwán
+CA=Canadá
+EU=Unión Europea
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=No se puede guardar la configuración
