--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -90,6 +90,9 @@ SA=Saudi-Arabia
 SE=Ruotsi
 UK=Iso-Britannia
 US=Yhdysvallat
+TW=Taiwan
+CA=Kanada
+EU=Euroopan unioni
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Asetukset ei voi tallentaa
