--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -90,6 +90,9 @@ SA=Arabie Saoudite
 SE=Suède
 UK=Royaume-Uni
 US=É.-U.A.
+TW=Taïwan
+CA=Canada
+EU=Union européenne
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Impossible d'enregistrer la configuration
