--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
@@ -90,6 +90,9 @@ SA=Arábia Saudita
 SE=Suécia
 UK=Reino Unido
 US=EUA
+TW=Taiwan
+CA=Canadá
+EU=União Europeia
 
 #Error messages
 ERR_CANNOT_SAVE_SETTINGS=Não é possível salvar a configuração
