Find related games - stage #2:more changes and updated UI - still more to go

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
@@ -24,3 +24,4 @@ TOOLS=Eines
 TOOLS_MNEMONIC=E
 FEED=Notícies de MSX
 FEED_PROCESSING_MESSAGE=Torna a provar-ho després de pocs segons
+FIND_RELATED=Cerca jocs relacionats
