--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
@@ -24,3 +24,4 @@ TOOLS=Extras
 TOOLS_MNEMONIC=E
 FEED=MSX Nachrichten
 FEED_PROCESSING_MESSAGE=Versuchen Sie es in ein paar Sekunden erneut
+FIND_RELATED=Ähnliche suchen
