--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
@@ -24,3 +24,4 @@ TOOLS=Herramientas
 TOOLS_MNEMONIC=H
 FEED=Noticias de MSX
 FEED_PROCESSING_MESSAGE=Volver a intentar transcurridos unos segundos
+FIND_RELATED=Buscar relacionados
