--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
@@ -24,3 +24,4 @@ TOOLS=Työkalut
 TOOLS_MNEMONIC=Y
 FEED=MSX uutisia
 FEED_PROCESSING_MESSAGE=Yritä uudelleen muutamassa sekunnissa
+FIND_RELATED=Etsi liittyvät
