--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
@@ -24,3 +24,4 @@ TOOLS=Outils
 TOOLS_MNEMONIC=U
 FEED=MSX Actualités
 FEED_PROCESSING_MESSAGE=Réessayer dans quelques secondes
+FIND_RELATED=Trouver des jeux associés
