--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
@@ -24,3 +24,4 @@ TOOLS=Strumenti
 TOOLS_MNEMONIC=S
 FEED=Notizie di MSX
 FEED_PROCESSING_MESSAGE=Riprova dopo alcuni secondi
+FIND_RELATED=Trova giochi correlati
