--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
@@ -24,3 +24,4 @@ TOOLS=\uB3C4\uAD6C
 TOOLS_MNEMONIC=X
 FEED=MSX \uB274\uC2A4
 FEED_PROCESSING_MESSAGE=\uBA87 \uCD08 \uD6C4\uC5D0 \uB2E4\uC2DC \uC2DC\uB3C4\uD558\uC2ED\uC2DC\uC624
+FIND_RELATED=\uAD00\uB828 \uAC8C\uC784 \uCC3E\uAE30
