--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
@@ -24,3 +24,4 @@ TOOLS=Extra
 TOOLS_MNEMONIC=E
 FEED=MSX Nieuws
 FEED_PROCESSING_MESSAGE=Probeer het nog een paar seconden opnieuw
+FIND_RELATED=Verwante spellen zoeken
