--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
@@ -24,3 +24,4 @@ TOOLS=Narz\u0119dzia
 TOOLS_MNEMONIC=N
 FEED=MSX Newsy
 FEED_PROCESSING_MESSAGE=Spróbuj ponownie po kilku sekundach
+FIND_RELATED=Znajd\u017A pokrewne
