--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
@@ -24,3 +24,4 @@ TOOLS=Ferramentas
 TOOLS_MNEMONIC=F
 FEED=Notícias do MSX
 FEED_PROCESSING_MESSAGE=Tentar novamente em alguns segundos
+FIND_RELATED=Localizar relacionadas
