--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
@@ -24,3 +24,4 @@ TOOLS=Verktyg
 TOOLS_MNEMONIC=V
 FEED=MSX Nyheter
 FEED_PROCESSING_MESSAGE=Försök igen om några sekunder
+FIND_RELATED=Sök efter relaterade spel
