--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
@@ -24,3 +24,4 @@ TOOLS=\u5DE5\u5177
 TOOLS_MNEMONIC=X
 FEED=MSX\u65B0\u95FB
 FEED_PROCESSING_MESSAGE=\u5728\u51E0\u79D2\u949F\u540E\u518D\u8BD5\u4E00\u6B21
+FIND_RELATED=\u67E5\u627E\u76F8\u5173\u9879
