--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
@@ -24,3 +24,4 @@ TOOLS=\u5DE5\u5177
 TOOLS_MNEMONIC=X
 FEED=MSX\u65B0\u805E
 FEED_PROCESSING_MESSAGE=\u5728\u5E7E\u79D2\u9418\u5F8C\u518D\u8A66\u4E00\u6B21
+FIND_RELATED=\u5C0B\u627E\u76F8\u95DC
