--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ar_KW.properties
@@ -1,2 +1,3 @@
 RELATED_TO=\u0645\u062A\u0635\u0644 \u0628\u0640
 NO_RESULTS=\u0644\u0627 \u062A\u0648\u062C\u062F \u0646\u062A\u0627\u0626\u062C
+SEARCH_ON_YOUTUBE=\u0627\u0644\u0628\u062D\u062B \u0641\u064A YouTube
