added support for locating related game in the launcher if a version of it is found there

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_de_DE.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Verknüpft mit
 NO_RESULTS=Keine Ergebnisse
 SEARCH_ON_YOUTUBE=Auf YouTube suchen
+LOCATE_IN_LAUNCHER=In openMSX Launcher suchen
