--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_es_ES.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Relacionados con
 NO_RESULTS=No hay resultados
 SEARCH_ON_YOUTUBE=Buscar en YouTube
+LOCATE_IN_LAUNCHER=Ubicar en openMSX Launcher
