--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_fa_IR.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\u0645\u0631\u062A\u0628\u0637 \u0628\u0627
 NO_RESULTS=\u0628\u062F\u0648\u0646 \u0646\u062A\u06CC\u062C\u0647
 SEARCH_ON_YOUTUBE=\u062C\u0633\u062A\u062C\u0648 \u062F\u0631 YouTube
+LOCATE_IN_LAUNCHER=\u0645\u06A9\u0627\u0646\u200C\u06CC\u0627\u0628\u06CC \u062F\u0631 openMSX Launcher
