--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_fi_FI.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Liittyy seuraaviin
 NO_RESULTS=Ei hakutuloksia
 SEARCH_ON_YOUTUBE=Etsi YouTube-palvelussa
+LOCATE_IN_LAUNCHER=Etsi OpenMSX Launcher: ssä
