--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_fr_FR.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Se rapporte à
 NO_RESULTS=Aucun résultat
 SEARCH_ON_YOUTUBE=Rechercher sur YouTube
+LOCATE_IN_LAUNCHER=Rechercher dans openMSX Launcher
