--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_it_IT.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Correlati a
 NO_RESULTS=Nessun risultato
 SEARCH_ON_YOUTUBE=Cerca in YouTube
+LOCATE_IN_LAUNCHER=Individua in openMSX Launcher
