--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ja_JP.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\u95A2\u4FC2
 NO_RESULTS=\u7D50\u679C\u306A\u3057
 SEARCH_ON_YOUTUBE=YouTube \u3067\u691C\u7D22
+LOCATE_IN_LAUNCHER=openMSX Launcher\u3067\u691C\u7D22
