--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_nl_NL.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Gerelateerd aan
 NO_RESULTS=Geen resultaten
 SEARCH_ON_YOUTUBE=Zoeken op YouTube
+LOCATE_IN_LAUNCHER=In openMSX Launcher vinden
