--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_pl_PL.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Powi\u0105zane z
 NO_RESULTS=Brak wyników
 SEARCH_ON_YOUTUBE=Wyszukaj w us\u0142udze YouTube
+LOCATE_IN_LAUNCHER=Zlokalizuj w openMSX Launcher
