--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_pt_BR.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Relacionados a
 NO_RESULTS=Nenhum Resultado
 SEARCH_ON_YOUTUBE=Pesquisar no YouTube
+LOCATE_IN_LAUNCHER=Localizar em openMSX Launcher
