--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_zh_TW.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\u76F8\u95DC\u9805\u76EE
 NO_RESULTS=\u6C92\u6709\u7D50\u679C
 SEARCH_ON_YOUTUBE=\u5728 YouTube \u4E0A\u641C\u5C0B
+LOCATE_IN_LAUNCHER=\u5728openMSX Launcher\u4E2D\u5C0B\u627E
