--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ar_KW.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\u0645\u062A\u0635\u0644 \u0628\u0640
 NO_RESULTS=\u0644\u0627 \u062A\u0648\u062C\u062F \u0646\u062A\u0627\u0626\u062C
 SEARCH_ON_YOUTUBE=\u0627\u0644\u0628\u062D\u062B \u0641\u064A YouTube
+LOCATE_IN_LAUNCHER=\u062A\u062D\u062F\u064A\u062F \u0627\u0644\u0645\u0648\u0642\u0639 \u0641\u064A openMSX Launcher
