--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ca_ES.properties
@@ -1,3 +1,4 @@
 RELATED_TO=Relacionats amb
 NO_RESULTS=No hi ha cap resultat
 SEARCH_ON_YOUTUBE=Cerca al YouTube
+LOCATE_IN_LAUNCHER=Localitza en openMSX Launcher
