--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ko_KR.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\uAD00\uB828
 NO_RESULTS=\uACB0\uACFC \uC5C6\uC74C
 SEARCH_ON_YOUTUBE=YouTube \uAC80\uC0C9
+LOCATE_IN_LAUNCHER=openMSX Launcher \uC5D0\uC11C \uCC3E\uAE30
