--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ru_RU.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_ru_RU.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\u0421\u0432\u044F\u0437\u0430\u043D\u043E \u0441
 NO_RESULTS=\u041D\u0435\u0442 \u0440\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u043E\u0432
 SEARCH_ON_YOUTUBE=\u041F\u043E\u0438\u0441\u043A \u043D\u0430 \u0441\u0430\u0439\u0442\u0435 YouTube
+LOCATE_IN_LAUNCHER=\u041D\u0430\u0439\u0442\u0438 \u0432 openMSX Launcher
