--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/RelatedGamesWindow_zh_CN.properties
@@ -1,3 +1,4 @@
 RELATED_TO=\u5173\u8054\u5230
 NO_RESULTS=\u65E0\u7ED3\u679C
 SEARCH_ON_YOUTUBE=\u5728 YouTube \u4E0A\u641C\u7D22
+LOCATE_IN_LAUNCHER=\u5728openMSX Launcher\u67E5\u627E
